test(core-api): enhance test suite and integrate Maven Surefire